<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bartending Drink </string>
    <string name="welcome">Welcome to !</string>
    <string name="input_username">Full name</string>
    <string name="label_username">Username?</string>
    <string name="label_email">Email?</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="do_not_have_account">Do not have a account?</string>
    <string name="confirm_password">Confirm password </string>
    <string name="register_now"><u>Register </u></string>
    <string name="action_home">Home</string>
    <string name="action_cart">Cart</string>
    <string name="action_account">Account</string>
    <string name="action_notification">Notifications</string>
    <!-- profile -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Nguyễn Văn A</string>
    <string name="title_personal_info">Thông tin cá nhân</string>
    <string name="title_history">Lịch sử giao dịch</string>
    <string name="title_link">Liên kết ví điện tử</string>
    <string name="title_question">Câu hỏi</string>
    <string name="title_introduce">Giới thiệu</string>
    <string name="title_condition">Điều khoản</string>
    <string name="title_support">Hỗ trợ</string>
    <string name="log_out">Đăng xuất</string>
    <string name="top_categories">Top Categories</string>
    <string name="show_all">Show All</string>
    <string name="action_material">Material</string>
    <string name="tracking_history">Tracking history</string>
    <string name="food_for_everyone">Food For Everyone</string>
    <string name="get_started">Get Started</string>
    <string name="ingredients">Ingredients</string>
    <string name="text_ingredient">No need to cook anything today. Just choose the ingredients you have and get the recipe inspiration! <i>(choose at least 2 ingredients for more varied recipe recommendations)</i>.</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_total">Total:</string>
    <string name="label_order">Order</string>
    <string name="label_no_item">No item</string>
    <string name="login">LOGIN</string>
    <string name="labbel_loading">Loading...</string>
    <string name="suggested_dishes">Suggested dishes</string>
    <string name="label_login">Đăng nhập</string>
    <string name="input_phone">Phone</string>
    <string name="address">Address</string>
    <string name="label_hi">Hi</string>
    <string name="cash">Cash</string>
    <!--    <string name="select_action">Chọn ảnh</string>-->
    <!--    <string name="take_photo">Chụp ảnh</string>-->
    <!--    <string name="choose_from_gallery">Chọn ảnh từ thư viện</string>-->
</resources>