<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CardListFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15"
        android:paddingBottom="55dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "14.9">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/pullToRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tvEmpty"
                        android:text="@string/label_no_item"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:layout_height="match_parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_my_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_cart" />
                </RelativeLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_weight="0.1"
            android:id="@+id/lnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/layout_green"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/label_total"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:text="$12"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/btnOrder"
                    android:paddingEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/label_order"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/gray"/>

</RelativeLayout>