<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/layout_green"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/image_banner" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_login"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">
                        <EditText
                            android:id="@+id/ed_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:background="@drawable/round_border"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:hint="@string/input_username"
                            android:inputType="text"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_signup"
                            tools:ignore="Autofill" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">
                        <EditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_email"
                            android:background="@drawable/round_border"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ed_username"
                            tools:ignore="Autofill" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">
                        <EditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_border"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableEnd="@drawable/ic_eye"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ed_email"
                            tools:ignore="Autofill" />
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true">
                        <EditText
                            android:id="@+id/ed_Cpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_border"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableEnd="@drawable/ic_eye"
                            android:drawablePadding="16dp"
                            android:ems="10"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:padding="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/ed_password"
                            tools:ignore="Autofill" />
                    </androidx.cardview.widget.CardView>

                    <RadioGroup
                        android:id="@+id/rad_group"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Admin"
                            android:id="@+id/rad_admin"/>

                        <RadioButton
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Shipper"
                            android:id="@+id/rad_shipper"/>

                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="35dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="35dp"
                        android:background="@drawable/round_bg"
                        android:text="@string/btn_register"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ed_Cpassword" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/gray" />
    </RelativeLayout>
</layout>
